# tuigram

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
demo/: demo.tape
src/: app.rs  main.rs  theme.rs
src/core/: mod.rs  models.rs  sequence.rs
src/layout/: mod.rs  models.rs  sequence.rs
src/render/: mod.rs  sequence.rs
src/ui/: confirm.rs  editor.rs  help.rs  input.rs  mod.rs  scroll.rs  selection.rs  state.rs  status_bar.rs
