[package]
name = "tuigram"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/preiter93/tuigram"
keywords = ["tui", "diagram", "sequence", "draw"]
description = "A TUI sequence diagram editor"
authors = ["preiter <phil.reiter93@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"

ratatui = "0.30.0"
tui-world = "0.1.2"
tui-theme-builder = "0.2"
clap = { version = "4", features = ["derive"] }
